--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -37,3 +37,6 @@ jobs:
           - idf_branch: "release/v5.3"
             lib_builder_branch: "release/v5.3"
             targets: "esp32,esp32s2,esp32s3,esp32c3,esp32c6,esp32h2,esp32p4"
+          - idf_branch: "release/v5.3x"
+            lib_builder_branch: "release/v5.3x"
+            targets: "esp32,esp32s2,esp32s3,esp32c3,esp32c6,esp32h2,esp32p4"
